--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,28 @@
 {
-  "name": "taphoaxanh-mmo-fe",
+  "name": "taphoaxanhmmofe",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "devtools": "react-devtools"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "axios": "^1.9.0",
-    "bootstrap": "^5.3.2",
-    "firebase": "^10.7.1",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-bootstrap": "^2.9.1",
-    "react-dom": "^18",
-    "slick-carousel": "^1.8.1"
+    "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
+    "next": "15.3.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/axios": "^0.9.36",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "react-devtools": "^6.1.2",
-    "tailwindcss": "^3.3.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.4",
     "typescript": "^5"
   }
 }
